--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <br>
         <ul>
                   <br>
+                        <li><a href="./posts/2025-08-17-counterfactual.html">2025-08-17: counterfactual</a></li>
                         <li><a href="./posts/2025-08-09-open-source.html">2025-08-09: open
 source</a></li>
                               <br>
@@ -48,7 +49,7 @@ lists</a></li>
         <hr>
     <small>
             <a href="./atom.xml">atom</a>/<a href="./rss.xml">rss</a> |
-      generated off rev <a href="https://github.com/tkoukpari/blog-src/commit/576cd0f1">576cd0f1</a>
+      generated off rev <a href="https://github.com/tkoukpari/blog-src/commit/efdc88d9">efdc88d9</a>
     </small>
   </article>
 </body>
