--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 source</a></li>
                               <br>
       rpcs
+                        <li><a href="./posts/2025-08-26-firewalls.html">2025-08-26: firewalls</a></li>
                         <li><a href="./posts/2025-07-26-hosting-servers-on-linode.html">2025-07-26: hosting
 servers on linode</a></li>
                         <li><a href="./posts/2025-07-19-rpcs.html">2025-07-19: intro</a></li>
@@ -49,7 +50,7 @@ lists</a></li>
         <hr>
     <small>
             <a href="./atom.xml">atom</a>/<a href="./rss.xml">rss</a> |
-      generated off rev <a href="https://github.com/tkoukpari/blog-src/commit/51c21ee3">51c21ee3</a>
+      generated off rev <a href="https://github.com/tkoukpari/blog-src/commit/52734c38">52734c38</a>
     </small>
   </article>
 </body>
