--- a/index.html
+++ b/index.html
@@ -21,11 +21,16 @@
     <br>
         <ul>
                   <br>
+                        <li><a href="./posts/2025-09-21-fall.html">2025-09-21: leila</a></li>
+                              <br>
+      liberty
                         <li><a href="./posts/2025-08-17-counterfactual.html">2025-08-17: counterfactual</a></li>
+                              <br>
                         <li><a href="./posts/2025-08-09-open-source.html">2025-08-09: open
 source</a></li>
                               <br>
       rpcs
+                        <li><a href="./posts/2025-08-27-kerberos.html">2025-08-27: kerberos</a></li>
                         <li><a href="./posts/2025-08-26-firewall.html">2025-08-26: firewall</a></li>
                         <li><a href="./posts/2025-07-26-hosting-servers-on-linode.html">2025-07-26: hosting
 servers on linode</a></li>
@@ -50,7 +55,7 @@ lists</a></li>
         <hr>
     <small>
             <a href="./atom.xml">atom</a>/<a href="./rss.xml">rss</a> |
-      generated off rev <a href="https://github.com/tkoukpari/blog-src/commit/435f1407">435f1407</a>
+      generated off rev <a href="https://github.com/tkoukpari/blog-src/commit/6e6df97c">6e6df97c</a>
     </small>
   </article>
 </body>
