--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <br>
         <ul>
                   <br>
-                        <li><a href="./posts/2025-09-21-fall.html">2025-09-21: leila</a></li>
+                        <li><a href="./posts/2025-09-21-leila.html">2025-09-21: لیلا</a></li>
                               <br>
       liberty
                         <li><a href="./posts/2025-08-17-counterfactual.html">2025-08-17: counterfactual</a></li>
@@ -55,7 +55,7 @@ lists</a></li>
         <hr>
     <small>
             <a href="./atom.xml">atom</a>/<a href="./rss.xml">rss</a> |
-      generated off rev <a href="https://github.com/tkoukpari/blog-src/commit/6e6df97c">6e6df97c</a>
+      generated off rev <a href="https://github.com/tkoukpari/blog-src/commit/a84b9774">a84b9774</a>
     </small>
   </article>
 </body>
