--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
                         <li><a href="./posts/2025-09-21-leila.html">2025-09-21: لیلا</a></li>
                               <br>
       liberty
+                        <li><a href="./posts/2026-01-04-greater-west-asia.html">2026-01-04: greater
+west asia</a></li>
+                        <li><a href="./posts/2026-01-03-securing-the-realm.html">2026-01-03: securing
+the realm</a></li>
+                        <li><a href="./posts/2026-01-02-the-only-path-to-liberty.html">2026-01-02: the
+only path to liberty</a></li>
+                        <li><a href="./posts/2026-01-01-game-theory.html">2026-01-01: game
+theory</a></li>
                         <li><a href="./posts/2025-08-17-counterfactual.html">2025-08-17: counterfactual</a></li>
                               <br>
                         <li><a href="./posts/2025-08-09-open-source.html">2025-08-09: open
@@ -55,7 +63,7 @@ lists</a></li>
         <hr>
     <small>
             <a href="./atom.xml">atom</a>/<a href="./rss.xml">rss</a> |
-      generated off rev <a href="https://github.com/tkoukpari/blog-src/commit/a84b9774">a84b9774</a>
+      generated off rev <a href="https://github.com/tkoukpari/blog-src/commit/9a17b268">9a17b268</a>
     </small>
   </article>
 </body>
